Add configuration for Get Started Text

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -3,3 +3,4 @@ en:
     headline: "Welcome to our community"
     subhead: "We're happy to have you here. If you need help, please search before you post."
     get_started_uri: "#"
+    get_started_text: "Get Started!"
